[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/img/Enemy1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Objects/Enemy1/Enemy1.gd" type="Script" id=2]
[ext_resource path="res://Assets/Objects/WalkingParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/img/Light.png" type="Texture" id=4]
[ext_resource path="res://Assets/SFX/Hit.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/Death.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.48
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 5, 4, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.99999
height = 6.00003

[sub_resource type="CircleShape2D" id=4]
radius = 216.0

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[node name="Enemy1" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CPUParticles2D" parent="." instance=ExtResource( 3 )]
position = Vector2( -1, 3 )
amount = 5

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )
vframes = 3
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Idle = SubResource( 1 )
anims/Spawn = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="DetectionRadius" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 0.6
color = Color( 1, 0.984314, 0.984314, 1 )
energy = 0.3

[node name="Damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
shape = SubResource( 5 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.641

[node name="Sounds" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[node name="Death" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_Player_entered"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="Death" to="." method="_on_Death_timeout"]
